--- a/app/Components/app.scss
+++ b/app/Components/app.scss
@@ -4,3 +4,11 @@
     cursor: pointer;
 }
 
+table {
+    border-collapse: collapse;
+}
+
+table, td {
+    border: 1px solid black;
+    padding:  10px;
+}
